# quill

./: CMakeLists.txt  LICENSE  README.md  TODO
cmake/: quill-config.cmake.in
examples/: Makefile  dumpspans.h  hello.cpp  joinstyles.cpp  mono_vs_lerp.cpp  point_culling.cpp  rasterbuffer.h  rectclip.cpp  scanlineprinter.h  slant.cpp  solidcolorfill.h  solidcolorfiller.h  solidfillstroker.h  stb_image_write.h  stb_perlin.h  strokelength.cpp  triangle.cpp  triangles_in_line.cpp  trianglestrokeraster.h  xformraster.h
examples/clipping/: clipping.pro  main.cpp
examples/debugger/: debugger.pro  main.cpp  window.cpp  window.h
examples/interactive/: interactive.pro  main.cpp
examples/qtbenchmark/: main.cpp  qtbenchmark.pro
include/: barycentricraster.h  barycentricraster_impl.h  clipper.h  clipper_impl.h  lerpraster.h  lerpraster_impl.h  line.h  line_impl.h  monorasterizer.h  monorasterizer_impl.h  quill.h  quill_clipraster.h  quill_clipraster_impl.h  quill_clockwiseraster.h  quill_clockwiseraster_impl.h  quill_global.h  quill_lerpraster.h  quill_lerpraster_impl.h  quill_line.h  quill_line_impl.h  quill_monoraster.h  quill_monoraster_impl.h  quill_stroker.h  quill_stroker_impl.h  quill_triangle.h  quill_triangle_impl.h  quill_varying.h  quill_varying_impl.h  quill_varyinggenerator.h  quill_varyinggenerator_impl.h  quill_vertex.h  quill_vertex_impl.h  span.h  span_impl.h  stroker.h  stroker_impl.h  trapezoid.h  triangle.h  triangle_impl.h  varying.h  (+5 more)
package/: portfile.cmake  vcpkg-abi-settings.cmake  vcpkg.json
